--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
 	{% endif %}
 	<script type = "text/javascript" 
         src = "{{ url_for('static', filename = 'hello.js') }}" ></script>
-    <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 	<!-- Fixed navbar -->
